--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Page
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Controlling Formality in Text-to-Speech Translation</title>
+  </head>
+  <body>
+    <!-- Page content -->
+  </body>
+</html>
