--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Controlling Formality in Text-to-Speech Translation</title>
   </head>
   <body>
-    <!-- Page content -->
+    <h1>Audio Demo</h1>
   </body>
 </html>
