--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 												<tbody>
 													<tr style="border-top:1px solid black">
 														<td><center>Pouring water</center></td>
-														<td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														<td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos_audios/mixtures/4-187504-B-17.wav" ></audio></td>
-														  <td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos_audios/separated/4-187504-B-17.wav" ></audio></td>
-														  <td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos_audios/ground_truth/4-187504-B-17.wav" ></audio></td>
 													</tr>
 													
