--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 												<tbody>
 													<tr style="border-top:1px solid black">
 														<td><center>Lea, Formal</center></td>
-														<td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														<td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos/18-Lea-formal.wav" ></audio></td>
-														  <td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos/10-Lea-formal.wav" ></audio></td>
-														  <td><audio controls class="audio-player" preload="metadata" style="width:220px;">
+														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="demos/14-Lea-formal.wav" ></audio></td>
 													</tr>
 													
