--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 													<tr style="border-top:1px solid black">
 														<td><center>Lea, Formal</center></td>
 														<td><audio controls class="audio-player" preload="auto" style="width:220px;">
-															<source src="/demos/18-Lea-formal.wav" ></audio></td>
+															<source src="/demos/18-Lea-formal.wav" type="audio/wav" ></audio></td>
 														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
-															<source src="/demos/10-Lea-formal.wav" ></audio></td>
+															<source src="demos/10-Lea-formal.wav" type="audio/wav"></audio></td>
 														  <td><audio controls class="audio-player" preload="auto" style="width:220px;">
 															<source src="/demos/14-Lea-formal.wav" ></audio></td>
 													</tr>
