--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 										<p><center>Senior Project for Bachelor of Science Degree in Computer Science at Yale University</center></p>
 										<p><center>Email: sophia.kang@yale.edu</center></p>
 										<p>
-											<center><a href="https://github.com/sophiayk20/formality-t2st">Github: https://github.com/sophiayk20/tts-formality-translation</a></center>
+											<center>GitHub: <a href="https://github.com/sophiayk20/formality-t2st">https://github.com/sophiayk20/formality-t2st</a></center>
 										</p>
 									</div>
 								</section>
