--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 										<p>
 											<center>GitHub: <a href="https://github.com/sophiayk20/formality-t2st">https://github.com/sophiayk20/formality-t2st</a></center>
 										</p>
+										<p>May 1st, 2025</p>
 									</div>
 								</section>
 
